-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.4.0
-
None
-
Microsoft Windows 7 32-bit
MSVC 2013
-angle (d3d11 by default now)
-
289e9af668df8b9f869ee42e295b582f246d6e32
When compiling the latest code from Qt 5.4 branch (as of 6th September, 2014) on Windows with -angle configure flag, it fails due to undefined reference to eglGetPlatformDisplayEXT.
I was able to compile by using:
#define EGL_EGLEXT_PROTOTYPES
in qtbase/src/plugins/platforms/windows/qwindowseglcontext.cpp
| For Gerrit Dashboard: QTBUG-41164 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 94159,3 | Define EGL_EGLEXT_PROTOTYPES for ANGLE | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |